tests/ui/consts/eval-enum.stderr
error[E0080]: attempt to divide `1_isize` by zero
  --> $DIR/eval-enum.rs:2:15
   |
LL |     DivZero = 1 / 0,
   |               ^^^^^ evaluation of `Test::DivZero::{constant#0}` failed here

error[E0080]: attempt to calculate the remainder of `1_isize` with a divisor of zero
  --> $DIR/eval-enum.rs:4:15
   |
LL |     RemZero = 1 % 0,
   |               ^^^^^ evaluation of `Test::RemZero::{constant#0}` failed here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
